myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtu-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtu-project
  template:
    metadata:
      labels:
        app: virtu-project
    spec:
      containers:
        - image: fabiencrts/virtu-project:1
          imagePullPolicy: IfNotPresent
          name: virtu-project
      restartPolicy: Always
